src/objects/DeclinedSurveyApproverGroup__c.object
<CustomObject>
    <description>Contain record used to Assigned Declined Survey Approver group as per &quot;Client Sat Decline Approvers Logic- 2014 Product Hierarchy.pdf&quot; attached on ER - 809. In this each Priority assigned is based on the each row of this pdf.</description>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North Europe &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>South Europe &amp; ME</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Central East and South Europe</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>US/Canada</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_Survey_Approver_Email__c</fullName>
        <description>ESPSFDCQI-16265</description>
        <label>Decline Survey Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DeclinedSurveyApproverGroup__c</fullName>
        <label>Declined Survey Approver Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Sat Admins</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver APAC excl China</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver B&amp;CS</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Canada</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Central Europe</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver China</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver CI</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Consumer Solutions</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver East Europe</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Government</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver GPS</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver HVS Other</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Japan</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Latin America</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver MMS</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver North Europe &amp; Afric</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver P&amp;MA</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Payer</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver Provider</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver RWES</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver RWES Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver RWES—France, Spain,</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver RWES-Germany, Belgiu</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver RWES Latin America</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver RWES US</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver S&amp;PA</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver South Europe &amp; ME</fullName>
                </value>
                <value>
                    <fullName>Client Sat Approver US Commercial Servic</fullName>
                </value>
                <value>
                    <fullName>Client Sat Appr CentEastSouth Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declined_SurveyApprover_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ESPCRMINT-224</description>
        <label>Declined Survey Approver 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Declined Survey Approver Groups</relationshipLabel>
        <relationshipName>Declined_Survey_Approver_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Declined_SurveyApprover_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ESPCRMINT-224</description>
        <label>Declined Survey Approver 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Declined Survey Approver Groups (Declined Survey Approver 2)</relationshipLabel>
        <relationshipName>Declined_Survey_Approver_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Declined_SurveyApprover_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ESPCRMINT-224</description>
        <label>Declined Survey Approver 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Declined Survey Approver Groups (Declined Survey Approver 3)</relationshipLabel>
        <relationshipName>Declined_Survey_Approver_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_This_Iqvia_Biotech__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-16265</description>
        <label>Is This Iqvia Biotech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>ESPCRMINT-187</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Clinical Technology</fullName>
                </value>
                <value>
                    <fullName>Commercial Solutions</fullName>
                </value>
                <value>
                    <fullName>Connected Devices</fullName>
                </value>
                <value>
                    <fullName>Data Sciences</fullName>
                </value>
                <value>
                    <fullName>Early Clinical Development</fullName>
                </value>
                <value>
                    <fullName>Health Engagement &amp; Communication</fullName>
                </value>
                <value>
                    <fullName>Outcome</fullName>
                </value>
                <value>
                    <fullName>Patient &amp; DCT Solutions</fullName>
                </value>
                <value>
                    <fullName>Q2 Solutions</fullName>
                </value>
                <value>
                    <fullName>Regulatory &amp; Drug Development Solutions</fullName>
                </value>
                <value>
                    <fullName>Safety &amp; Med Info</fullName>
                </value>
                <value>
                    <fullName>RWLP</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Tech &amp; Data</fullName>
                </value>
                <value>
                    <fullName>Biosimilars</fullName>
                    <isActive>false</isActive>
                    <label>Biosimilars</label>
                </value>
                <value>
                    <fullName>Biostatistical/Medical Writing</fullName>
                    <isActive>false</isActive>
                    <label>Biostatistical/Medical Writing</label>
                </value>
                <value>
                    <fullName>Clintec</fullName>
                    <isActive>false</isActive>
                    <label>Clintec</label>
                </value>
                <value>
                    <fullName>Core Clinical</fullName>
                    <isActive>false</isActive>
                    <label>Core Clinical</label>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                    <isActive>false</isActive>
                    <label>Data Management</label>
                </value>
                <value>
                    <fullName>DrugDev</fullName>
                    <isActive>false</isActive>
                    <label>DrugDev</label>
                </value>
                <value>
                    <fullName>ECG/Cardiac Safety</fullName>
                    <isActive>false</isActive>
                    <label>ECG/Cardiac Safety</label>
                </value>
                <value>
                    <fullName>GFR Clinical</fullName>
                    <isActive>false</isActive>
                    <label>GFR Clinical</label>
                </value>
                <value>
                    <fullName>Lab</fullName>
                    <isActive>false</isActive>
                    <label>Lab</label>
                </value>
                <value>
                    <fullName>Lifecycle Safety</fullName>
                    <isActive>false</isActive>
                    <label>Lifecycle Safety</label>
                </value>
                <value>
                    <fullName>Novella</fullName>
                    <isActive>false</isActive>
                    <label>Novella</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainDeliveryCountry__c</fullName>
        <label>Main Delivery Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoftBusinessUnit__c</fullName>
        <label>PeopleSoft Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC Total</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>CES Global Management</fullName>
                </value>
                <value>
                    <fullName>Consumer Solutions</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
                <value>
                    <fullName>EMEA Forecasting</fullName>
                </value>
                <value>
                    <fullName>EMEA Publications</fullName>
                </value>
                <value>
                    <fullName>Europe Operations</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Global Operations bf Service Charge</fullName>
                </value>
                <value>
                    <fullName>Global Pharma Solutions Administration</fullName>
                </value>
                <value>
                    <fullName>Global Services Overhead</fullName>
                </value>
                <value>
                    <fullName>GMM Services Overhead</fullName>
                </value>
                <value>
                    <fullName>GTO bf Billing for Services</fullName>
                </value>
                <value>
                    <fullName>GTS&amp;O bf Billing for Services</fullName>
                </value>
                <value>
                    <fullName>IMS Consulting Group Overhead</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Management Consulting</fullName>
                </value>
                <value>
                    <fullName>Management Consulting Administration</fullName>
                </value>
                <value>
                    <fullName>Management Consulting Competency Center</fullName>
                </value>
                <value>
                    <fullName>North Europe &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Real World Evidence Solutions</fullName>
                </value>
                <value>
                    <fullName>Regional Entities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoftProductCOE__c</fullName>
        <label>PeopleSoft Product COE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand &amp; Commercial Strategy</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Competitive Intelligence</fullName>
                </value>
                <value>
                    <fullName>Consumer Solutions</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government Services</fullName>
                </value>
                <value>
                    <fullName>Healthcare Value Solutions</fullName>
                </value>
                <value>
                    <fullName>Healthcare Value Solutions Services</fullName>
                </value>
                <value>
                    <fullName>Health Economics Outcome Research</fullName>
                </value>
                <value>
                    <fullName>Information Management &amp; PSS</fullName>
                </value>
                <value>
                    <fullName>Managed Market Services</fullName>
                </value>
                <value>
                    <fullName>Marketing Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Pricing &amp; Market Access</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Sales Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Strategy &amp; Portfolio Analysis</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Early Clinical Development (CRM)</fullName>
                </value>
                <value>
                    <fullName>D&amp;DI</fullName>
                </value>
                <value>
                    <fullName>RDS BFS - Corp Allocation</fullName>
                </value>
                <value>
                    <fullName>Early Development</fullName>
                </value>
                <value>
                    <fullName>Core Information Offerings</fullName>
                </value>
                <value>
                    <fullName>Labs - TSAIL</fullName>
                </value>
                <value>
                    <fullName>Contract Research Organization (CRM)</fullName>
                </value>
                <value>
                    <fullName>Labs JV Integration</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees</fullName>
                </value>
                <value>
                    <fullName>Commercial Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoftProductOfferingType__c</fullName>
        <label>PeopleSoft Product Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Analytics and Consulting</fullName>
                </value>
                <value>
                    <fullName>Analytics Solutions</fullName>
                </value>
                <value>
                    <fullName>Barter Services</fullName>
                </value>
                <value>
                    <fullName>ChannelDynamics</fullName>
                </value>
                <value>
                    <fullName>Clinical Technology</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Commercial Engagement Services</fullName>
                </value>
                <value>
                    <fullName>Commercial Services</fullName>
                </value>
                <value>
                    <fullName>Commercial Solutions OH</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Core Clinical</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
                <value>
                    <fullName>Enterprise &amp; Medical</fullName>
                </value>
                <value>
                    <fullName>Global Market Insights</fullName>
                </value>
                <value>
                    <fullName>Information Management</fullName>
                </value>
                <value>
                    <fullName>Managed Markets</fullName>
                </value>
                <value>
                    <fullName>Management Consulting</fullName>
                </value>
                <value>
                    <fullName>Market Measurement</fullName>
                </value>
                <value>
                    <fullName>MIDAS and Pricing Insights</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>National Tracking</fullName>
                </value>
                <value>
                    <fullName>Non Pharma and Barter</fullName>
                </value>
                <value>
                    <fullName>Orchestrated Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Engagement</fullName>
                </value>
                <value>
                    <fullName>Payer Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoft_Product_Offering_Segment__c</fullName>
        <label>PeopleSoft Product Offering Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Global Offerings</fullName>
                </value>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>Technology &amp; Commercial Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Technology &amp; Commercial Solutions</label>
                </value>
                <value>
                    <fullName>Real World &amp; Analytics Solutions</fullName>
                </value>
                <value>
                    <fullName>Real World Insights</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Commercial Solutions</fullName>
                </value>
                <value>
                    <fullName>R&amp;DS Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoft_User_Country__c</fullName>
        <label>PeopleSoft User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Declined Survey Approver Group</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Declined Survey Approver Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declined Survey Approver Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>